<?xml version="1.0" encoding="utf-8"?><!-- 声明版本号以及编码方式 -->
<resources>
    <string name="hello">Hello World, MSTXClient!</string>
    <string name="app_name">美食天下</string>
    <string name="indexTitle">美食网</string>
    <string name="uid">账号：</string>
    <string name="pwd">密码：</string>
    <string name="loginButton">登录</string>
    <string name="registerButton">注册</string><!-- 登录界面的注册按钮 -->
    <string name="registerTitle">美食网--用户注册</string>
	<string name="u_nameTextView">用户名:</string>
	<string name="pwdTextView1">设置密码:</string> 
	<string name="pwdTextView2">确认密码:</string>  
	<string name="qqTextView">QQ号:</string>
	<string name="emailTextView">电子邮件:</string>
	<string name="u_disTextView">自我描述:</string>
	<string name="registerButton2">立即注册</string><!-- 注册界面的按钮 -->
	<string name="resetButton">重置</string>
	<string name="searchButton">搜索</string>
	<string name="msName">美食名称:</string>
	<string name="msTime">上传时间:</string>
	<string name="msDis">美食描述:</string>
	<string name="deleteButton">删除</string>
	<string name="msPrice">美食价格：</string>
	<string name="msSort">美食种类：</string>
	<string name="msImage">美食图片：</string>
	<string name="locationStr">店铺位置：</string>
	<string name="photo_button">拍照</string>
	<string name="init_button">打开</string>
	<string name="cbRemember">记住密码</string>
	<string name="msLocation">地理位置:</string>
	<string name="mshotelName">店铺名称</string>
</resources>