<?xml version="1.0" encoding="utf-8"?><!-- 声明版本号和编码格式 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300px"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <ImageView
	    	android:layout_width="22px"
	    	android:layout_height="fill_parent"
	    	android:src="@drawable/logo"
	    	style="@style/logoText"/>
		<TextView  
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:layout_height="wrap_content" 
		    android:text="@string/indexTitle"/>
	</LinearLayout>
    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_x="40px"
			android:layout_y="28px"
			android:text="@string/uid"
			android:textColor="@color/word"
			android:textSize="18sp"/>
		<EditText
			android:id="@+id/uid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_x="115px"
			android:layout_y="20px"			
			android:width="150px"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_x="40px"
			android:layout_y="93px"			
			android:text="@string/pwd"
			android:textColor="@color/word"
			android:textSize="18sp"/>
		<EditText
			android:id="@+id/pwd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:password="true"
			android:gravity="clip_horizontal"
			android:layout_x="115px"
			android:layout_y="80px"			
			android:width="150px"/>	
		<CheckBox
			android:id="@+id/cbRemember"
			android:text="@string/cbRemember"
			android:layout_gravity="center_horizontal"
			android:checked="false"
			android:layout_x="100px"
			android:layout_y="130px"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/loginButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_x="50px"
			android:layout_y="180px"
			android:width="100px"					
			android:text="@string/loginButton"/>
		<Button
			android:id="@+id/registerButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_x="155px"
			android:layout_y="180px"
			android:width="100px"
			android:text="@string/registerButton"/>
	</AbsoluteLayout>		
</LinearLayout>