<?xml version="1.0" encoding="utf-8"?><!-- 声明版本号和编码格式 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <ImageView
	    	android:layout_width="22px"
	    	android:layout_height="fill_parent"
	    	android:src="@drawable/logo"
	    	style="@style/logoText"/>
		<TextView  
			android:id="@+id/registerTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:layout_height="wrap_content" 
		    android:text="@string/registerTitle"/>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	   	android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
		    android:textSize="18sp"
		    android:textColor="@color/word"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/u_nameTextView"/>
		<EditText
			android:id="@+id/u_nameEditText"
			android:singleLine="true"
			android:layout_width="200px"
			android:layout_height="wrap_content"/>
	</LinearLayout>	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
		    android:textSize="18sp"
		    android:textColor="@color/word"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/pwdTextView1"/>
		<EditText
			android:id="@+id/pwdEditText1"
			android:password="true"
			android:singleLine="true"
			android:layout_width="200px"
			android:layout_height="wrap_content"/>
	</LinearLayout>	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
		    android:textSize="18sp"
		    android:textColor="@color/word"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/pwdTextView2"/>
		<EditText
			android:id="@+id/pwdEditText2"
			android:password="true"
			android:singleLine="true"
			android:layout_width="200px"
			android:layout_height="wrap_content"/>
	</LinearLayout>	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
		    android:textSize="18sp"
		    android:textColor="@color/word"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/qqTextView"/>
		<EditText
			android:id="@+id/qqEditText"
			android:singleLine="true"
			android:layout_width="200px"
			android:layout_height="wrap_content"/>
	</LinearLayout>		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
		    android:textSize="18sp"
		    android:textColor="@color/word"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/emailTextView"/>
		<EditText
			android:id="@+id/emailEditText"
			android:singleLine="true"
			android:layout_width="200px"
			android:layout_height="wrap_content"/>
	</LinearLayout>		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
		    android:textSize="18sp"
		    android:textColor="@color/word"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/u_disTextView"/>
		<EditText
			android:id="@+id/u_disEditText"
			android:lines="6"
			android:layout_gravity="top"
			android:layout_width="200px"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<Button  
			android:id="@+id/registerButton2"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/registerButton2"/>
		<Button  
			android:id="@+id/resetButton"
			android:layout_width="80px"
		    android:layout_height="wrap_content" 
		    android:text="@string/resetButton"/>		    
	</LinearLayout>			
</LinearLayout>