<?xml version="1.0" encoding="utf-8"?><!-- 声明版本号和编码格式 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    >
	<LinearLayout 
		android:id="@+id/favourite"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
			android:id="@+id/indexTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:gravity="center"
		    android:layout_height="wrap_content"
		    android:text="我的收藏"/>
		<ListView 
			android:id="@+id/searchlistView01"       
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:choiceMode="singleChoice" />		    
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/search"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:gravity="center_horizontal"
	    android:layout_height="wrap_content">
		<TextView  
			android:id="@+id/indexTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:gravity="center"
		    android:layout_height="wrap_content"
		    android:text="美食搜索"/>
		<LinearLayout 
			android:id="@+id/search"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:gravity="center_horizontal"
		    android:layout_marginTop="10px"
		    android:layout_height="wrap_content">
			<TextView  
				android:gravity="left"
				android:textColor="@color/word"
				android:textSize="20sp"
			    android:layout_width="80px" 
			    android:layout_height="wrap_content"
			    android:text="关键字:"/>
			<EditText
				android:id="@+id/infoValues"
				android:layout_width="230px"
				android:layout_height="wrap_content"
				android:singleLine="true"/>
		</LinearLayout>		
		<LinearLayout 
			android:id="@+id/search"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:gravity="center"
		    android:layout_marginTop="10px"
		    android:layout_height="wrap_content">
			<TextView  
				android:gravity="left"
				android:textColor="@color/word"
				android:textSize="20sp"
			    android:layout_width="80px" 
			    android:layout_height="wrap_content"
			    android:text="种类:"/>
			<Spinner 
				android:id="@+id/mySort" 
				android:layout_width="230px"
				android:layout_height="wrap_content"/><!-- 添加一个下拉列表控件 -->
		</LinearLayout>		
		<LinearLayout 
			android:id="@+id/search"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:gravity="center"
		    android:layout_marginTop="10px"
		    android:layout_height="wrap_content">
			<TextView  
				android:gravity="left"
				android:textColor="@color/word"
				android:textSize="20sp"
			    android:layout_width="80px" 
			    android:layout_height="wrap_content"
			    android:text="价格:"/>
			<EditText
				android:id="@+id/infoPrice1"
				android:layout_width="107px"
				android:layout_height="wrap_content"
				android:phoneNumber="true"
				android:singleLine="true"/>
			<TextView  
				android:gravity="center"
				android:textColor="@color/word"
				android:textSize="20sp"
			    android:layout_width="15px" 
			    android:layout_height="wrap_content"
			    android:text="--"/>				
			<EditText
				android:id="@+id/infoPrice2"
				android:phoneNumber="true"
				android:layout_width="108px"
				android:layout_height="wrap_content"
				android:singleLine="true"/>				
		</LinearLayout>		
		<LinearLayout 
			android:id="@+id/search"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:gravity="center"
		    android:layout_marginTop="12px"
		    android:layout_height="wrap_content">
			<ImageButton
				android:id="@+id/searchButton"
			   	android:layout_width="wrap_content" 
			    android:layout_height="38px"
			    android:layout_marginRight="4px"
			    android:src="@drawable/search_button"/>		
		</LinearLayout>					
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/recommend"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
			android:id="@+id/indexTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:gravity="center"
		    android:layout_height="wrap_content"
		    android:text="美食推荐"/>
		<ListView 
			android:id="@+id/searchlistView03"       
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:choiceMode="singleChoice" />		    
	</LinearLayout>
	<LinearLayout
		android:id="@+id/update"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView  
			android:id="@+id/indexTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:gravity="center"
		    android:layout_height="wrap_content"
		    android:text="上传美食信息"/>
		<ScrollView 
			android:id="@+id/scrollview"  
		    android:layout_width="fill_parent"  
		    android:layout_height="wrap_content"  
		    android:scrollbars="vertical">   
		    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:background="@drawable/background"
			    >
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    	android:orientation="horizontal"
			    	android:gravity="center"
			    	android:layout_width="fill_parent"
			   	 	android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/msName"
				    	/>
					<EditText 
						android:id="@+id/msName"
						android:textSize="18sp"
						android:textColor="@color/textword2"
					    android:layout_width="190px" 
					    android:layout_height="wrap_content"/>
				</LinearLayout>   	
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/msSort"
				    	/>
					<Spinner 
						android:id="@+id/mySort2"
						android:textColor="@color/textword2" 
						android:layout_width="190px"
						android:layout_height="wrap_content"/><!-- 添加一个下拉列表控件 -->
				</LinearLayout> 
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/msPrice"
				    	/>
					<EditText  
						android:id="@+id/msPrice"
						android:textSize="18sp"
						android:textColor="@color/textword2"
					    android:layout_width="190px" 
					    android:layout_height="wrap_content" />
				</LinearLayout> 
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/mshotelName"
				    	/>
					<EditText  
						android:id="@+id/mshotelName"
						android:textSize="18sp"
						android:textColor="@color/textword2"
					    android:layout_width="190px" 
					    android:layout_height="wrap_content" />
				</LinearLayout>					
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/msDis"
				    	/>
					<EditText  
						android:id="@+id/msDis"
						android:textSize="18sp"
						android:textColor="@color/textword2"
					    android:layout_width="190px"
					    android:scrollbars="vertical" 
					    android:layout_height="wrap_content"
					    android:lines="4"/>
				</LinearLayout>
		
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/locationStr"
				    />
					<EditText  
						android:id="@+id/msLocation"
						android:textSize="18sp"
						android:textColor="@color/textword2"
					    android:layout_width="190px" 
					    android:lines="2"
					    android:cursorVisible="false"
					    android:editable="false"
					    android:clickable="true"
					    android:enabled="true"
					    android:text="点击我获取经纬度"
					    android:layout_height="wrap_content"/>
				</LinearLayout>
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
				    <TextView 
				    	android:layout_width="110px"
				    	android:layout_height="wrap_content"
				    	android:textSize="18sp"
					    android:textColor="@color/word"
				    	android:text="@string/msImage"
				    /> 
				    <ImageView
				    	android:id="@+id/msImage"
				    	android:layout_width="190px"
				    	android:layout_height="wrap_content"
				    	android:src="@drawable/click_to_photo"
				    />
				</LinearLayout>													
			    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"> 
				    <ImageButton   
				    	android:id="@+id/updateButton" 
				    	android:layout_width="wrap_content" 
				    	android:layout_height="35px"
				    	android:src="@drawable/update_button"/>			    	 				    					    	 
				</LinearLayout>
			</LinearLayout> 
		</ScrollView>
	</LinearLayout>
</FrameLayout>
